--- a/app/src/main/res/layout/room_element_list_view.xml
+++ b/app/src/main/res/layout/room_element_list_view.xml
@@ -34,8 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
-                android:text="10/22/2018 "
                 android:layout_gravity="center"
+                android:text="10/22/2018 "
                 android:textColor="@android:color/darker_gray"
                 android:textSize="12dp" />
         </LinearLayout>
@@ -84,7 +84,6 @@
                     android:id="@+id/txt_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:gravity="right"
                     android:text="2.5 triệu/phòng"
                     android:textColor="#F54500"
@@ -95,12 +94,13 @@
                     android:id="@+id/txt_area"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginRight="5dp"
                     android:text="5m x 4m"
                     android:textColor="#666666"
-                    android:textSize="12sp"
-                    android:layout_marginRight="5dp"/>
+                    android:textSize="12sp" />
                 />
             </RelativeLayout>
 
