--- a/app/src/main/res/layout/room_detail_view.xml
+++ b/app/src/main/res/layout/room_detail_view.xml
@@ -98,7 +98,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
-                                    android:text="+19"
+                                    android:text="+1"
                                     android:textColor="#fff"
                                     android:textSize="30sp" />
                             </FrameLayout>
@@ -122,7 +122,7 @@
                             android:gravity="right"
                             android:text="KÍ TÚC XÁ"
                             android:textColor="#666666"
-                            android:textSize="24px" />
+                            android:textSize="12sp" />
 
                     </RelativeLayout>
 
@@ -239,6 +239,7 @@
                                 android:textSize="18dp" />
 
                             <TextView
+                                android:id="@+id/tv_amountOfPeople"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
@@ -310,38 +311,6 @@
                         android:verticalSpacing="18dp">
 
                     </androidx.recyclerview.widget.RecyclerView>
-
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_margin="5dp"
-                        android:background="#666666" />
-
-                    <LinearLayout
-                        android:id="@+id/lnLt_expand_convenients"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/txt_expand_convenients"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:padding="2dp"
-                            android:text="Mở rộng"
-                            android:textColor="#D34B16"
-                            android:textSize="18dp" />
-
-                        <ImageView
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="5dp"
-                            android:src="@drawable/down" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -483,38 +452,6 @@
                         android:maxLines="5"
                         android:text="Liên hệ: 0966.332.775 - 0969.676.678 Thắng Điện: 3500k/kWH, nước 100.000đ/người, internet: 100.000đ/phòng Địa chỉ: 113 Trần Kế Xương. P7, Phú Nhuận"
                         android:textSize="18dp" />
-
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_margin="5dp"
-                        android:background="#666666" />
-
-                    <LinearLayout
-                        android:id="@+id/lnLt_expand_description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/txt_expand_description"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:padding="2dp"
-                            android:text="Mở rộng"
-                            android:textColor="#D34B16"
-                            android:textSize="18dp" />
-
-                        <ImageView
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="5dp"
-                            android:src="@drawable/down" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
