--- a/app/src/main/res/layout/room_price_element_grid_room_detail_view.xml
+++ b/app/src/main/res/layout/room_price_element_grid_room_detail_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
@@ -15,8 +15,8 @@
         android:id="@+id/txt_namePrice_price_room_detail"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:text="Miễn phí"
         android:layout_marginTop="8dp"
+        android:text="Miễn phí"
         android:textAlignment="center"
         android:textColor="#666666"
         android:textSize="13sp" />
