--- a/app/src/main/res/layout/utility_element_grid_room_detail_view.xml
+++ b/app/src/main/res/layout/utility_element_grid_room_detail_view.xml
@@ -3,13 +3,13 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/img_utility_room_detail"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_gravity="center"
         android:src="@drawable/aircondition" />
 
     <TextView
