--- a/app/src/main/res/layout/element_location_recycler_view.xml
+++ b/app/src/main/res/layout/element_location_recycler_view.xml
@@ -20,10 +20,11 @@
         <TextView
             android:id="@+id/txt_location"
             android:layout_width="wrap_content"
-            android:layout_height="21dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:text="Hà Đông" />
+            android:text="Hà Đông"
+            android:textSize="18dp"/>
 
     </LinearLayout>
 
