--- a/app/src/main/res/drawable/back_ground_filter_element.xml
+++ b/app/src/main/res/drawable/back_ground_filter_element.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/white"/>
     <corners android:radius="20dp" />
-    <stroke android:width="2dp" android:color="#F54500" />
+    <stroke android:width="2dp" android:color="#666666" />
 </shape>
