--- a/app/src/main/res/layout/activity_search_view.xml
+++ b/app/src/main/res/layout/activity_search_view.xml
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="9">
+                android:weightSum="11">
 
                 <CheckBox
                     android:paddingLeft="7dp"
@@ -97,10 +97,23 @@
                     android:textColor="#666666" />
 
                 <CheckBox
+                    android:paddingLeft="7dp"
+                    android:id="@+id/chBox_convenient"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/custom_checkbox_search"
+                    android:button="@android:color/transparent"
+                    android:drawableRight="@drawable/ic_svg_down"
+                    android:paddingRight="18dp"
+                    android:text="Tiện ích"
+                    android:textColor="#666666" />
+
+                <CheckBox
                     android:id="@+id/chBox_type"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="3"
                     android:background="@drawable/custom_checkbox_search"
                     android:button="@android:color/transparent"
                     android:drawableRight="@drawable/ic_svg_down"
@@ -121,6 +134,33 @@
                     android:textColor="#666666" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp">
+
+                <ImageButton
+                    android:id="@+id/btn_delete_all_filter"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:padding="5dp"
+                    android:src="@drawable/bin" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"/>
+            </LinearLayout>
+
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
@@ -139,7 +179,7 @@
                 android:background="@drawable/custom_button_login"
                 android:text="Áp dụng"
                 android:textColor="@color/white"
-                android:textSize="17dp" />
+                android:textSize="16dp" />
 
         </LinearLayout>
 
