--- a/app/src/main/res/layout/post_room_step3.xml
+++ b/app/src/main/res/layout/post_room_step3.xml
@@ -45,14 +45,15 @@
                     android:src="@drawable/image" />
 
                 <TextView
+                    android:id="@+id/text_view_demo_pick_img"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Chọn hình ảnh từ thư viện"
-                    android:layout_marginTop="8dp"
-                    android:textSize="15dp"
                     android:layout_below="@+id/btnImg_upLoad_push_room"
+                    android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:textColor="@color/black"/>
+                    android:text="Chọn hình ảnh từ thư viện"
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -60,11 +61,11 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_img_upload"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </androidx.recyclerview.widget.RecyclerView>
+                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
             </RelativeLayout>
 
             <TextView
