--- a/app/src/main/res/layout/my_room_element_list_view.xml
+++ b/app/src/main/res/layout/my_room_element_list_view.xml
@@ -122,12 +122,14 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
                 <Button
+                    android:id="@+id/btn_change"
                     android:layout_width="120dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:text="Chưa thuê"
                     android:textSize="13dp"/>
                 <Button
+                    android:id="@+id/btn_delete"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
