--- a/app/src/main/res/layout/my_room_element_list_view.xml
+++ b/app/src/main/res/layout/my_room_element_list_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cardViewRoomList"
+    android:id="@+id/my_room_element_recycler_view"
     android:padding="0dp"
     app:cardElevation="0dp"
     android:layout_marginTop="10dp">
@@ -19,8 +19,9 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-                <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/img_room"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/my_room_image_view_demo_room"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
                     android:layout_marginLeft="10dp"
@@ -31,7 +32,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/txt_timeCreated"
+                android:id="@+id/my_room_text_view_time_added"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -53,7 +54,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/txt_type"
+                    android:id="@+id/my_room_text_view_type_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
@@ -64,7 +65,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/txt_name"
+                android:id="@+id/my_room_text_view_name_room"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -83,7 +84,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txt_price"
+                    android:id="@+id/my_room_text_view_price_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -91,8 +92,9 @@
                     android:text="2.5 triệu/phòng"
                     android:textColor="#F54500"
                     android:textSize="16dp" />
+
                 <TextView
-                    android:id="@+id/txt_area"
+                    android:id="@+id/my_room_text_view_area_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -104,7 +106,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/txt_address"
+                android:id="@+id/my_room_text_view_address_room"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -121,20 +123,24 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="2">
+
                 <Button
+                    android:id="@+id/my_room_button_update_room"
                     android:layout_width="120dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="Chưa thuê"
-                    android:textSize="13dp"/>
+                    android:textSize="13dp" />
+
                 <Button
+                    android:id="@+id/my_room_button_delete_room"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:text="Xóa phòng"
-                    android:textSize="13dp"
-                    android:layout_marginRight="5dp"/>
+                    android:textSize="13dp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
