--- a/app/src/main/res/layout/room_management_user_view.xml
+++ b/app/src/main/res/layout/room_management_user_view.xml
@@ -19,6 +19,8 @@
             android:background="#ffffff"
             android:orientation="vertical">
             <TableLayout
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
@@ -26,12 +28,14 @@
                 <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal">
-                    <LinearLayout android:layout_width="110dp"
+                    android:gravity="center_horizontal"
+                    android:weightSum="3">
+                    <LinearLayout android:layout_width="match_parent"
                         android:layout_marginRight="15dp"
                         android:layout_height="100dp"
                         android:orientation="vertical"
-                        android:background="@drawable/custom_user_view">
+                        android:background="@drawable/custom_user_view"
+                        android:layout_weight="1">
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
@@ -57,11 +61,12 @@
                             android:layout_marginTop="0dp"
                             android:textAlignment="center"/>
                     </LinearLayout>
-                    <LinearLayout android:layout_width="110dp"
+                    <LinearLayout android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_marginRight="15dp"
                         android:orientation="vertical"
-                        android:background="@drawable/custom_user_comment">
+                        android:background="@drawable/custom_user_comment"
+                        android:layout_weight="1">
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
@@ -87,10 +92,11 @@
                             android:layout_marginTop="0dp"
                             android:textAlignment="center"/>
                     </LinearLayout>
-                    <LinearLayout android:layout_width="110dp"
+                    <LinearLayout android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:orientation="vertical"
-                        android:background="@drawable/custom_user_room">
+                        android:background="@drawable/custom_user_room"
+                        android:layout_weight="1">
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
@@ -130,8 +136,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="25dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -159,12 +165,12 @@
                 android:orientation="vertical"
                 android:background="@color/white">
 
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_Main_Room"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center"/>
 
                 <!--Processbar-->
