--- a/app/src/main/res/layout/my_room_element_list_view.xml
+++ b/app/src/main/res/layout/my_room_element_list_view.xml
@@ -12,22 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:orientation="horizontal">
+
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <com.makeramen.roundedimageview.RoundedImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/my_room_image_view_demo_room"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_width="125dp"
+                    android:layout_height="125dp"
+                    android:layout_marginTop="6dp"
                     android:scaleType="centerCrop"
-                    app:riv_corner_radius="5dip"
                     android:src="@drawable/ic_room"
+                    app:riv_corner_radius="5dip"
                     app:riv_oval="false" />
             </RelativeLayout>
 
@@ -37,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
-                android:text="10/10/2023"
                 android:layout_gravity="center"
+                android:text="10/10/2023"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="13dp" />
         </LinearLayout>
@@ -46,37 +48,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="4dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/my_room_text_view_type_room"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:gravity="right"
-                    android:text="KÍ TÚC XÁ"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="12dp" />
-            </RelativeLayout>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/my_room_text_view_name_room"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="10dp"
+                android:ellipsize="end"
+                android:lineSpacingExtra="3dp"
+                android:maxLines="2"
                 android:text="Cho thuê phòng trọ giá rẻ"
                 android:textColor="#666666"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:maxLines="2"
-                android:lineSpacingExtra="3dp"
-                android:ellipsize="end"
-                android:layout_marginRight="5dp"/>
+                android:textStyle="bold" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -88,6 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="right"
                     android:text="2.5 triệu/phòng"
                     android:textColor="#F54500"
@@ -99,10 +91,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="5dp"
+                    android:layout_marginRight="15dp"
                     android:text="5m x 4m"
                     android:textColor="#666666"
-                    android:textSize="16dp"
-                    android:layout_marginRight="15dp"/>
+                    android:textSize="16dp" />
             </RelativeLayout>
 
             <TextView
@@ -110,13 +102,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
-                android:text="96A, Mộ Lao, Hà Đông, Hà Nội"
-                android:textColor="#666666"
-                android:textSize="16dp"
-                android:maxLines="2"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="10dp"
                 android:ellipsize="end"
                 android:lineSpacingExtra="5dp"
-                android:layout_marginRight="5dp"/>
+                android:maxLines="2"
+                android:text="96A, Mộ Lao, Hà Đông, Hà Nội"
+                android:textColor="#666666"
+                android:textSize="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -127,18 +120,19 @@
                 <Button
                     android:id="@+id/my_room_button_update_room"
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
+                    android:layout_height="44dp"
                     android:layout_weight="1"
                     android:text="Chưa thuê"
                     android:textSize="12dp" />
+
                 <Button
                     android:id="@+id/my_room_button_delete_room"
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
+                    android:layout_height="44dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    android:text="Xóa phòng"
+                    android:text="Xóa"
                     android:textSize="12dp" />
             </LinearLayout>
         </LinearLayout>
